@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.tulip" name="Tulip Library" version="3.0.4" provider-name="Twilight0">
+<addon id="script.module.tulip" name="Tulip Library" version="3.1.0" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.addon" version="16.1.000"/>
         <import addon="script.module.kodi-six" version="0.0.2"/>
@@ -10,27 +10,19 @@
         <summary lang="en">Tulip library with helper functions for Kodi and its forks</summary>
         <description lang="en">Tulip library combines the best elements from Lambda's "lamlib" and tknorris's shared modules. Also includes various enhancements, newer and improved functions and Python 3 compatibility, though the latter is largely untested. Can also be as standalone utils</description>
         <platform>all</platform>
-        <reuselanguageinvoker>false</reuselanguageinvoker>
         <license>GPL-3.0-only</license>
         <source>https://github.com/Twilight0/script.module.tulip</source>
-        <news>[B]3.0.X[/B]
+        <news>[B]3.1.X[/B]
+- Update user agent strings
+- Added a few more utilities
+
+[B]3.0.X[/B]
 - Utilize certifi for net module
 - Add ability to save locally unencrypted m3u8 ts video content
 - Update user agent strings
 - Change the way kodi version is obtained
 - Add limit and username/password auth to net module
-- Convert url bytes object to string (python 3 only)
-
-[B]2.9.X[/B]
-- Net module taken from ResolveURL and adapted
-  > Deprecate client.request function
-- Add futures for compatibility
-- Utilize futures on youtube module (default maximum workers 5)
-- Remove caching from library itself
-- Update user agent strings
-- Tweaks in compat module
-- Fixes in the bookmarking functions
-- Various other compatibility fixes</news>
+- Convert url bytes object to string (python 3 only)</news>
         <assets>
             <icon>icon.png</icon>
             <fanart>fanart.jpg</fanart>
