@@ -1,3 +1,7 @@
+[B]3.1.X[/B]
+- Update user agent strings
+- Added a few more utilities
+
 [B]3.0.X[/B]
 - Utilize certifi for net module
 - Add ability to save locally unencrypted m3u8 ts video content
